// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> renders component 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1;
}

.c1 {
  width: 100%;
  border: none;
  border-radius: 5px;
  padding: 10px 5px;
  outline: 0;
  background-color: #D0D0D0;
  margin-bottom: 2px;
}

<input
  class="c0 c1"
  name="nome"
  placeholder="Nome"
  required=""
  type="text"
  value="Carol"
/>
`;

exports[`<TextField /> renders component 2`] = `
<label
  aria-label="nome"
  for="nome"
>
  Nome
</label>
`;

exports[`<TextField /> when field is invalid display the respective error message 1`] = `
.c0 {
  font-size: 16px;
  font-weight: 400;
  line-height: 1;
}

.c1 {
  width: 100%;
  border: none;
  border-radius: 5px;
  padding: 10px 5px;
  outline: 0;
  background-color: #D0D0D0;
  margin-bottom: 2px;
  border: 1px solid;
  border-color: #dc3545;
}

.c1 + span {
  color: #dc3545;
}

<input
  class="c0 c1"
  name="email"
  placeholder="Email"
  required=""
  type="email"
  value="teste@teste.com"
/>
`;
